# capsec

./: .capsec.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/capsec/: Cargo.toml  README.md
crates/capsec-core/: Cargo.toml  README.md
crates/capsec-core/src/: attenuate.rs  cap.rs  error.rs  has.rs  lib.rs  permission.rs  root.rs  runtime.rs
crates/capsec-deep/: .gitignore  Cargo.toml  README.md  build.rs  capsec_test  clean  rust-toolchain.toml  simple_fs
crates/capsec-deep/src/: main.rs
crates/capsec-deep/tests/fixtures/: clean.rs  macro_ffi.rs  simple_fs.rs
crates/capsec-example-db/: Cargo.toml  README.md
crates/capsec-example-db/src/: lib.rs
crates/capsec-macro/: Cargo.toml  README.md
crates/capsec-macro/src/: lib.rs  resolve.rs
crates/capsec-std/: Cargo.toml  README.md
crates/capsec-std/src/: env.rs  fs.rs  lib.rs  net.rs  process.rs
crates/capsec-tests/: Cargo.toml  README.md
crates/capsec-tests/docs/: run-tests.sh
crates/capsec-tests/docs/run-001/: findings.md  test-output.txt
crates/capsec-tests/src/: lib.rs
crates/capsec-tests/tests/: audit_evasion.rs  compile_attacks.rs  scope_escapes.rs  type_system.rs
crates/capsec-tests/tests/compile_fail/: sealed_impl_from_outside.rs  sealed_impl_from_outside.stderr
crates/capsec-tokio/src/: lib.rs
crates/capsec/examples/: async_context.rs
crates/capsec/src/: lib.rs
crates/cargo-capsec/: Cargo.toml  README.md
crates/cargo-capsec/src/: authorities.rs  baseline.rs  (+10 more)
scripts/releases/: 1_github.py  2_crates.py
(+33 files in other folders)
